# rules_rust

cargo/cargo_build_script_runner/: bin.rs
docs/: flatten.md  rust_repositories.md
rust/: repositories.bzl
test/cargo_build_script/: BUILD.bazel  test_exec_root_access.build.rs
